--- a/index.html
+++ b/index.html
@@ -257,12 +257,12 @@ Alternatively if you want to just have a single hero
               
 
             <div class="w-full md:w-1/3 xl:w-1/4 p-6 flex flex-col">
-                <a href="https://www.amazon.in/dp/B07VKM2HR5?psc=1&th=1&smid=A15APWRK6P7LBV&tag=travel0592-21">
-                    <img class="hover:grow hover:shadow-lg" src="https://m.media-amazon.com/images/I/41YMxB8GbOL._SL1000_.jpg">
+                <a href="https://amzn.to/48T1Ytu">
+                    <img class="hover:grow hover:shadow-lg" src="https://m.media-amazon.com/images/I/71HhQzxmlfL._SL1500_.jpg">
                     <div class="pt-3 flex items-center justify-between">
-                        <p class="">NIVEA Nourishing Body Milk 600ml Body Lotion</p>
+                        <p class="">Odonil Gel Pocket Mix - 30g (Assorted pack of 3 new fragrances) | Infused with Essential Oils | Germ Protection | Lasts Up to 30 days | Air Freshener for Bathroom and Toilet</p>
                     </div>
-                    <p class="pt-1 text-gray-900">₹ 314</p>
+                    <p class="pt-1 text-gray-900">₹ 92.09</p>
                 </a>
             </div>
 <!-- Product 1 -->
