--- a/index.html
+++ b/index.html
@@ -234,6 +234,16 @@ Alternatively if you want to just have a single hero
               </div>
               
 
+              <div class="w-full md:w-1/3 xl:w-1/4 p-6 flex flex-col">
+                <a href="https://amzn.to/3w192p1">
+                  <img class="hover:grow hover:shadow-lg" src="https://m.media-amazon.com/images/I/51COhKQY9iL._SL1201_.jpg">
+                  <div class="pt-3 flex items-center justify-between">
+                    <p class="">Mamaearth Rice Face Wash With Rice Water & Niacinamide For Glass Skin - 100 Ml</p>
+                  </div>
+                  <p class="pt-1 text-gray-900">₹ 232</p>
+                </a>
+              </div>
+
             <div class="w-full md:w-1/3 xl:w-1/4 p-6 flex flex-col">
                 <a href="https://amzn.to/3RPApd6">
                   <img class="hover:grow hover:shadow-lg" src="https://m.media-amazon.com/images/I/31oQbBG7h3L._SX300_SY300_QL70_ML2_.jpg">
