--- a/index.html
+++ b/index.html
@@ -223,6 +223,18 @@ Alternatively if you want to just have a single hero
               </div>
             </nav>
 
+            
+            <div class="w-full md:w-1/3 xl:w-1/4 p-6 flex flex-col">
+                <a href="https://amzn.to/47JMg24">
+                  <img class="hover:grow hover:shadow-lg" src="https://m.media-amazon.com/images/I/51sZ0bOotML._SL1500_.jpg">
+                  <div class="pt-3 flex items-center justify-between">
+                    <p class="">OnePlus Bullets Wireless Z2 ANC Bluetooth in Ear Earphones with Mic, 45dB Hybrid ANC, Bombastic Bass - 12.4 mm Drivers, 10 Mins Charge - 20 Hrs Music, 28 Hrs Battery (Black)</p>
+                  </div>
+                  <p class="pt-1 text-gray-900">₹1,999</p>
+                </a>
+              </div>
+
+
             <div class="w-full md:w-1/3 xl:w-1/4 p-6 flex flex-col">
                 <a href="https://amzn.to/47JMg24">
                   <img class="hover:grow hover:shadow-lg" src="https://m.media-amazon.com/images/I/51sZ0bOotML._SL1500_.jpg">
@@ -267,7 +279,7 @@ Alternatively if you want to just have a single hero
               
 
             <div class="w-full md:w-1/3 xl:w-1/4 p-6 flex flex-col">
-                <a href="https://amzn.to/48T1Ytu">
+                <a href="https://amzn.to/3vXVCdx">
                     <img class="hover:grow hover:shadow-lg" src="https://m.media-amazon.com/images/I/71HhQzxmlfL._SL1500_.jpg">
                     <div class="pt-3 flex items-center justify-between">
                         <p class="">Odonil Gel Pocket Mix - 30g (Assorted pack of 3 new fragrances) | Infused with Essential Oils | Germ Protection | Lasts Up to 30 days | Air Freshener for Bathroom and Toilet</p>
