google  search console meta tag added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="shopping, low price, cheap price, best product, ">
     <link rel="icon" type="image/x-icon" href="image.png">
     <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>
-	
+	<meta name="google-site-verification" content="0tsiQ3xQNFUL9KbmZUQMPFZkkTfDHzytN0mMyPdWFS8" />
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:200,400&display=swap" rel="stylesheet">
 
     <style>
