--- a/index.html
+++ b/index.html
@@ -200,12 +200,12 @@ Alternatively if you want to just have a single hero
 
             
             <div class="w-full md:w-1/3 xl:w-1/4 p-6 flex flex-col">
-                <a href="https://amzn.to/47JMg24">
-                  <img class="hover:grow hover:shadow-lg" src="https://m.media-amazon.com/images/I/51sZ0bOotML._SL1500_.jpg">
+                <a href="https://amzn.to/4cDRsZ9">
+                  <img class="hover:grow hover:shadow-lg" src="https://m.media-amazon.com/images/I/71AKHgmgn8L._SL1500_.jpg">
                   <div class="pt-3 flex items-center justify-between">
-                    <p class="">OnePlus Bullets Wireless Z2 ANC Bluetooth in Ear Earphones with Mic, 45dB Hybrid ANC, Bombastic Bass - 12.4 mm Drivers, 10 Mins Charge - 20 Hrs Music, 28 Hrs Battery (Black)</p>
+                    <p class="">Raspberry Pi 5 (8Gb Ram) | All New Raspberry Pi 5 Board</p>
                   </div>
-                  <p class="pt-1 text-gray-900">₹1,999</p>
+                  <p class="pt-1 text-gray-900">₹ 9,450</p>
                 </a>
               </div>
 
