--- a/index.html
+++ b/index.html
@@ -200,12 +200,12 @@ Alternatively if you want to just have a single hero
 
             
             <div class="w-full md:w-1/3 xl:w-1/4 p-6 flex flex-col">
-                <a href="https://amzn.to/4cDRsZ9">
-                  <img class="hover:grow hover:shadow-lg" src="https://m.media-amazon.com/images/I/71AKHgmgn8L._SL1500_.jpg">
+                <a href="https://amzn.to/3Yb0B6D">
+                  <img class="hover:grow hover:shadow-lg" src="https://m.media-amazon.com/images/I/61VXAN0uvgL._SL1418_.jpg">
                   <div class="pt-3 flex items-center justify-between">
-                    <p class="">Raspberry Pi 5 (8Gb Ram) | All New Raspberry Pi 5 Board</p>
+                    <p class="">Sounce Fast Phone Charging Cable & Data Sync USB Cable Compatible With iPhone 13, 12,11, X, 8, 7, 6, 5, iPad Air, Pro, Mini & iOS Devices (Set of 2)</p>
                   </div>
-                  <p class="pt-1 text-gray-900">₹ 9,450</p>
+                  <p class="pt-1 text-gray-900">₹ 314</p>
                 </a>
               </div>
 
