--- a/index.html
+++ b/index.html
@@ -211,12 +211,12 @@ Alternatively if you want to just have a single hero
 
 
             <div class="w-full md:w-1/3 xl:w-1/4 p-6 flex flex-col">
-                <a href="https://amzn.to/47JMg24">
-                  <img class="hover:grow hover:shadow-lg" src="https://m.media-amazon.com/images/I/51sZ0bOotML._SL1500_.jpg">
+                <a href="https://amzn.to/3zWqdu6">
+                  <img class="hover:grow hover:shadow-lg" src="https://m.media-amazon.com/images/I/613p4LlITgL._SL1500_.jpg">
                   <div class="pt-3 flex items-center justify-between">
-                    <p class="">OnePlus Bullets Wireless Z2 ANC Bluetooth in Ear Earphones with Mic, 45dB Hybrid ANC, Bombastic Bass - 12.4 mm Drivers, 10 Mins Charge - 20 Hrs Music, 28 Hrs Battery (Black)</p>
+                    <p class="">Ambrane 10000mAh Slim & Compact Powerbank, 22.5W Fast Charging, USB & Type C Output, Power Delivery, Quick Charge for iPhone, Android & Other Devices, Made in India + Type C Cable (Stylo 10, Black)</p>
                   </div>
-                  <p class="pt-1 text-gray-900">₹1,999</p>
+                  <p class="pt-1 text-gray-900">₹ 777</p>
                 </a>
               </div>
               
