--- a/index.html
+++ b/index.html
@@ -243,12 +243,12 @@ Alternatively if you want to just have a single hero
               
 
             <div class="w-full md:w-1/3 xl:w-1/4 p-6 flex flex-col">
-                <a href="https://amzn.to/495oqiH">
-                  <img class="hover:grow hover:shadow-lg" src="https://m.media-amazon.com/images/I/310b1UFZGjL._SY300_SX300_QL70_ML2_.jpg">
+                <a href="https://amzn.to/3SlWReS">
+                  <img class="hover:grow hover:shadow-lg" src="https://m.media-amazon.com/images/I/71O0AHFAOEL._SL1500_.jpg">
                   <div class="pt-3 flex items-center justify-between">
-                    <p class="">Apple Watch Charger Magnetic Fast Charging Cable [Portable] Magnetic Wireless Charging Compatible with iWatch Series Ultra/9/8/7/6/SE/SE2/5/4/3/2 - [3.3FT] White</p>
+                    <p class="">PROLITE Background Support Kit (9ft x 9ft) for Backdrop Photography & Videography with Carry Bag (Portable & Foldable)</p>
                   </div>
-                  <p class="pt-1 text-gray-900">₹199.00</p>
+                  <p class="pt-1 text-gray-900"> ₹ 1,999</p>
                 </a>
               </div>
               
