--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     </a>
                 </div>
 
-                <div class="order-2 md:order-3 flex items-center" id="nav-content">
+                <div class="order-2 md:order-3 flex items-center w-40 md:w-auto" id="nav-content">
 
 <div class="relative mr-4 flex-1 max-w-md">
                         <input type="search" placeholder="Search" class="bg-gray-100 border-2 border-gray-300 h-10 px-5 pr-10 rounded-full text-sm focus:outline-none w-full">
