--- a/index.html
+++ b/index.html
@@ -209,6 +209,16 @@ Alternatively if you want to just have a single hero
 
             
             <div class="w-full md:w-1/3 xl:w-1/4 p-6 flex flex-col">
+                <a href="https://amzn.to/3InvdMF">
+                  <img class="hover:grow hover:shadow-lg" src="https://m.media-amazon.com/images/I/61UzQMCRaeL._SL1500_.jpg">
+                  <div class="pt-3 flex items-center justify-between">
+                    <p class="">Securement Tamper Proof Plastic Courier Bag/Polybag with Pod for Packing</p>
+                  </div>
+                  <p class="pt-1 text-gray-900">₹ 179</p>
+                </a>
+              </div>
+
+	             <div class="w-full md:w-1/3 xl:w-1/4 p-6 flex flex-col">
                 <a href="https://amzn.to/3YwBn2O">
                   <img class="hover:grow hover:shadow-lg" src="https://m.media-amazon.com/images/I/61UzQMCRaeL._SL1500_.jpg">
                   <div class="pt-3 flex items-center justify-between">
@@ -216,8 +226,7 @@ Alternatively if you want to just have a single hero
                   </div>
                   <p class="pt-1 text-gray-900">₹ 179</p>
                 </a>
-              </div>
-
+              </div>	
 
             <div class="w-full md:w-1/3 xl:w-1/4 p-6 flex flex-col">
                 <a href="https://amzn.to/3Y5rwiS">
