--- a/index.html
+++ b/index.html
@@ -218,6 +218,29 @@ Alternatively if you want to just have a single hero
                 </a>
               </div>
 
+		          
+            <div class="w-full md:w-1/3 xl:w-1/4 p-6 flex flex-col">
+                <a href="https://amzn.to/3TM5pfq">
+                  <img class="hover:grow hover:shadow-lg" src="https://m.media-amazon.com/images/I/61+TXBHS-HL._SX679_.jpg">
+                  <div class="pt-3 flex items-center justify-between">
+                    <p class="">Amkette New and Improved Optimus BT 4 in 1 Multi Device Wireless Keyboard/Bluetooth Keyboard | One Click Device Switching and AI Access for Windows, MacOs, Android and iOS, Dual OS Layout (Grey)</p>
+                  </div>
+                  <p class="pt-1 text-gray-900">₹ 899</p>
+                </a>
+              </div>
+
+          
+            <div class="w-full md:w-1/3 xl:w-1/4 p-6 flex flex-col">
+                <a href="https://amzn.to/4eZ8DWD">
+                  <img class="hover:grow hover:shadow-lg" src="https://m.media-amazon.com/images/I/61UzQMCRaeL._SL1500_.jpg">
+                  <div class="pt-3 flex items-center justify-between">
+                    <p class="">https://m.media-amazon.com/images/I/61eiM4vykhL._SX679_.jpg</p>
+                  </div>
+                  <p class="pt-1 text-gray-900">₹ 616</p>
+                </a>
+              </div>
+
+
 	             <div class="w-full md:w-1/3 xl:w-1/4 p-6 flex flex-col">
                 <a href="https://amzn.to/3YwBn2O">
                   <img class="hover:grow hover:shadow-lg" src="https://m.media-amazon.com/images/I/61UzQMCRaeL._SL1500_.jpg">
